--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "seoul-data-chart-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "postinstall": "husky install",
-    "format": "prettier --cache --write .",
-    "lint": "eslint --cache ."
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "npm run format"
-  },
-  "eslintConfig": {
-    "extends": [
-        "react-app"
-    ]
-},
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.0.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+    "name": "seoul-data-chart-app",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "json-server --watch db.json --port 4000 & vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "postinstall": "husky install",
+        "format": "prettier --cache --write .",
+        "lint": "eslint --cache ."
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": "npm run format"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app"
+        ]
+    },
+    "dependencies": {
+        "json-server": "^0.17.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "@vitejs/plugin-react": "^4.0.3",
+        "eslint": "^8.45.0",
+        "eslint-config-prettier": "^9.0.0",
+        "husky": "^8.0.3",
+        "prettier": "^3.0.2",
+        "typescript": "^5.0.2",
+        "vite": "^4.4.5"
+    }
 }
