--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "axios": "^1.5.0",
         "json-server": "^0.17.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "recharts": "^2.8.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
