--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "json-server": "^0.17.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "recharts": "^2.8.0"
+        "recharts": "^2.8.0",
+        "styled-components": "^6.0.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
