--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "json-server": "^0.17.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.11.0",
         "recharts": "^2.8.0",
         "styled-components": "^6.0.7"
     },
