--- a/.eslintrc
+++ b/.eslintrc
@@ -4,18 +4,18 @@
         "node": true
     },
     "extends": [
-        "react-app",
         "prettier",
         "eslint:recommended",
+        "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "no-var": "error", // var 금지
-        "no-multiple-empty-lines": "error", // 여러 줄 공백 금지
-        "no-console": ["error", {"allow": ["warn", "error", "info"]}], // console.log() 금지
-        "eqeqeq": "error", // 일치 연산자 사용 필수
-        "dot-notation": "error", // 가능하다면 dot notation 사용
-        "no-unused-vars": "error", // 사용하지 않는 변수 금지
+        "no-var": "error",
+        "no-multiple-empty-lines": "error",
+        "no-console": ["error", {"allow": ["warn", "error", "info"]}],
+        "eqeqeq": "error",
+        "dot-notation": "error",
+        "no-unused-vars": "error",
         "func-style": ["error", "expression"]
     }
 }
