--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
+        "@typescript-eslint/parser": "^6.7.0",
         "@vitejs/plugin-react": "^4.0.3",
         "eslint": "^8.45.0",
         "eslint-config-prettier": "^9.0.0",
+        "eslint-import-resolver-typescript": "^3.6.0",
+        "eslint-plugin-import": "^2.28.1",
         "husky": "^8.0.3",
         "prettier": "^3.0.2",
         "typescript": "^5.0.2",
