fix: 임포트한  리액트 사용하지 않아 빌드에러 나는 것 해결

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,12 +3,7 @@
         "browser": true,
         "node": true
     },
-    "extends": [
-        "prettier",
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
+    "extends": ["prettier", "eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "rules": {
         "no-var": "error",
         "no-multiple-empty-lines": "error",
